--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -40,8 +40,7 @@ String;
   \lstinline|this|.  This allows to use \lstinline|for| to iterate
   over the string.
 \begin{urbiscript}[firstnumber=last]
-"123".asList;
-[00000001] ["1", "2", "3"]
+assert_eq("123".asList, ["1", "2", "3"]);
 for (var v : "123")
   echo(v);
 [00000001] *** 1
@@ -52,17 +51,14 @@ for (var v : "123")
 \item \lstinline|asPrintable|\\
   Return \lstinline|this| as a literal (escaped) string.
 \begin{urbiscript}[firstnumber=last]
-"foo".asPrintable;
-[00000000] "\"foo\""
-"foo".asPrintable.asPrintable;
-[00000000] "\"\\\"foo\\\"\""
+assert_eq("foo".asPrintable, "\"foo\"");
+assert_eq("foo".asPrintable.asPrintable, "\"\\\"foo\\\"\"");
 \end{urbiscript}
 
 \item \lstinline|asString|\\
   Return \lstinline|this|.
 \begin{urbiscript}[firstnumber=last]
-"\"foo\"".asString;
-[00000000] "\"foo\""
+assert_eq("\"foo\"".asString, "\"foo\"");
 \end{urbiscript}
 
 \item \lstinline|distance(\var{other})|\\
@@ -82,10 +78,8 @@ assert_eq("foo".distance("bar"), 3);
   by \lstinline|this|.  It can safely be used with
   \lstinline|Object.setSlot| and so forth.
 \begin{urbiscript}[firstnumber=last]
-String.fresh;
-[00000000] "_5"
-"foo".fresh;
-[00000000] "foo_6"
+assert_eq(String.fresh, "_5");
+assert_eq("foo".fresh, "foo_6");
 \end{urbiscript}
 
 \item \lstinline|replace(\var{from}, \var{to})|\\
@@ -128,8 +122,7 @@ assert_eq("Hello, World!".toUpper, "HELLO, WORLD!");
 %  \href{http://www.boost.org/doc/libs/1_39_0/libs/format/doc/format.html,
 %    Boost.Format}.  For instance:
 \begin{urbiscript}[firstnumber=last]
-"%s + %s = %s" % [1, 2, 3];
-[00000000] "1 + 2 = 3"
+assert_eq("%s + %s = %s" % [1, 2, 3], "1 + 2 = 3");
 \end{urbiscript}
 
 \item \lstinline|'*'(\var{n})|\\
