doc: fix nondeterminism.
	* doc/tests/test.u (Dictionary.asList): Provide a deterministic
	version.
	* doc/specs/dictionary.tex: Adjust.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -35,7 +35,7 @@ var d = Dictionary.new("one", 1, "two", 2);
 
 \begin{urbiscript}[firstnumber=last]
 d.asList;
-[00000000] [("two", 2), ("one", 1)]
+[00000000] [("one", 1), ("two", 2)]
 \end{urbiscript}
 
 \item \lstinline|clear|\\
