doc: fix bad macro.
	* doc/tutorial/tutorial.tex: here.

--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -1564,7 +1564,7 @@ all([1, 2, -3], getSlot("positive"));
 
 It turns out that \lstinline|all| already exists: instead of
 \lstinline|all(\var{list}, \var{predicate})|, use
-\lstinline|\var{list}.all(\variables{predicate})|, see \refObject{List}.
+\lstinline|\var{list}.all(\var{predicate})|, see \refObject{List}.
 
 \section{Lambda functions}
 
