--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -15,6 +15,7 @@
 \input{specs/dictionary}
 \input{specs/event}
 \input{specs/float}
+\input{specs/global}
 \input{specs/group}
 \input{specs/lazy}
 \input{specs/list}
