--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -657,7 +657,6 @@ precedence.
 
 \end{table}
 
-\FloatBarrier
 
 \section{Scopes and local variables}
 
@@ -748,7 +747,7 @@ case references refer to the innermost variable, as shown below.
 [00000000] *** outer y
 \end{urbiscript}
 
-\FloatBarrier
+
 \section{Functions}
 
 \subsection{Function Definition}
@@ -1016,14 +1015,8 @@ function wrapper()
     echo("ping");
   // Here we make it escape the scope by returning a closure on it.
   return function() { x++ };
-};
-[00000000:hide] function () {
-[:]  var x = 0;
-[:]  Control . at_(x . '>'(1), detach(echo("ping")), detach({}));
-[:]  return function () {
-[:]    x++
-[:]  };
-[:]}
+} |
+[00000001:warning] !!! expensive feature: at (<expression>), prefer at (<event>)
 
 var f = wrapper();
 [00000000:hide] function () {
@@ -1036,7 +1029,9 @@ f();
 [00000000] *** ping
 \end{urbiscript}
 
-\FloatBarrier
+See \autoref{sec:faq:atexp} for more details about the warning.
+
+
 \section{Objects}
 
 Any value in \us is an object. Objects contain:
@@ -1277,7 +1272,6 @@ o.b(50);
 [00000000] 51
 \end{urbiscript}
 
-\FloatBarrier
 \section{Imperative flow control}
 
 \subsection{break}
@@ -1638,7 +1632,7 @@ while (0 < i)
 [00000000] *** 1
 \end{urbiscript}
 
-\FloatBarrier
+
 \section{Exceptions}
 
 \subsection{Throwing exceptions}
@@ -1708,7 +1702,7 @@ test(51);
 
 
 
-\FloatBarrier
+
 \section{Parallel and event-based flow control}
 
 \subsection{at}
@@ -1718,9 +1712,9 @@ test(51);
 \subsection{waituntil}
 \subsection{whenever}
 
-\FloatBarrier
+
 \section{Pattern matching}
-\FloatBarrier
+
 \section{Trajectories}
 
 % Local Variables:
