urbi: fuse Constants into Math.
	* share/urbi/urbi.u (Constants.pi, Constants.inf, Constants.nan):
	Move to...
	* share/urbi/math.u (Math.pi, Math.inf, Math.nan): here.
	* doc/specs/object.tex: Adjust.

--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -36,7 +36,7 @@ assert_eq(Dummy.protos, [Orderable, Object]);
 assert_eq(12.allProtos.map(function (t) { t.asString }),
           ["12", "0", "Orderable", "Object", "Comparable", "Global",
            "Tags", "Math", "DeprecatedCommands", "Kernel1Functions",
-           "System", "Constants"]);
+           "System"]);
 \end{urbiscript}
 
 \item \lstinline|allSlotNames|\\
