--- a/doc/faq.tex
+++ b/doc/faq.tex
@@ -162,8 +162,9 @@ myObject.protos;
 \end{urbifixme}
 
 \paragraph{How can I know the slots available for a given object?}
-The \lstinline{slotNames} and \lstinline{allSlotNames} methods return
-respectively the local slot names and the local+inherited slot names.
+The \lstinline{localSlotNames} and \lstinline{allSlotNames} methods
+return respectively the local slot names and the local+inherited slot
+names.
 
 \paragraph{How do I create a new function?}
 Functions are first class objects. That means that you can add them as
